// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Regular"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components BodyMonospace Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegrey"
  defaultWeight="Medium"
  font="DMMono"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#475A6D",
        "fontFamily": "DM Mono",
        "fontStyle": "normal",
        "fontWeight": "500",
      },
    ]
  }
  weight="Medium"
>
  Text
</Text>
`;

exports[`Test Typography Components CTA Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="white"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
    }
  }
  style={
    [
      {
        "fontSize": 16,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 28,
      "lineHeight": 42,
    }
  }
  style={
    [
      {
        "fontSize": 28,
        "lineHeight": 42,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 28,
      "lineHeight": 42,
    }
  }
  style={
    [
      {
        "fontSize": 28,
        "lineHeight": 42,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 26,
      "lineHeight": 39,
    }
  }
  style={
    [
      {
        "fontSize": 26,
        "lineHeight": 39,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="bluegreyLight"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 22,
      "lineHeight": 33,
    }
  }
  style={
    [
      {
        "fontSize": 22,
        "lineHeight": 33,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="bluegreyDark"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#17324D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 5`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 6`] = `
<Text
  allowFontScaling={false}
  color="bluegreyLight"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 7`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="bluegreyDark"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 20,
      "lineHeight": 30,
    }
  }
  style={
    [
      {
        "fontSize": 20,
        "lineHeight": 30,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "400",
      },
    ]
  }
  weight="Regular"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "textTransform": "uppercase",
    }
  }
  style={
    [
      {
        "fontSize": 14,
        "letterSpacing": 0.5,
        "lineHeight": 16,
        "textTransform": "uppercase",
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components H6 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Label Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="black"
  defaultColor="black"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 2`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 3`] = `
<Text
  allowFontScaling={false}
  color="bluegrey"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 4`] = `
<Text
  allowFontScaling={false}
  color="red"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#C02927",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components LabelSmall Snapshot 5`] = `
<Text
  allowFontScaling={false}
  color="white"
  defaultColor="blue"
  defaultWeight="Bold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 14,
    }
  }
  style={
    [
      {
        "fontSize": 14,
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "700",
      },
    ]
  }
  weight="Bold"
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  allowFontScaling={false}
  color="blue"
  defaultColor="blue"
  defaultWeight="SemiBold"
  font="TitilliumWeb"
  fontStyle={
    {
      "fontSize": 16,
      "lineHeight": 24,
      "textDecorationLine": "underline",
    }
  }
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
        "textDecorationLine": "underline",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Web",
        "fontStyle": "normal",
        "fontWeight": "600",
      },
    ]
  }
  weight="SemiBold"
>
  Text
</Text>
`;
